latest dev version

--- a/inst/ChangeLog
+++ b/inst/ChangeLog
@@ -1,3 +1,6 @@
+Version 3.17
+    o Improved import options in the GUI
+      
 Version 3.16
     o Fine tuned C code to avoid compilation problems in GCC
       
